--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ email: pascalwinter82@yahoo.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
-url: wiloo82.github.io
-baseurl: "" #/website
+url: #wiloo82.github.io
+baseurl: /website
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site
 
@@ -64,5 +64,5 @@ google_analytics:
 #theme: jekyll-theme-prologue
 #=======
 theme: jekyll-theme-prologue
-#remote_theme: chrisbobbe/jekyll-theme-prologue
+remote_theme: chrisbobbe/jekyll-theme-prologue
 collections: [sections]
