--- a/_config.yml
+++ b/_config.yml
@@ -66,3 +66,7 @@ google_analytics:
 #theme: jekyll-theme-prologue
 remote_theme: chrisbobbe/jekyll-theme-prologue
 collections: [sections]
+
+
+sass:
+    style: compressed
