--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,12 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Pascal Winter"
 description              : "A Pythonic approach to Actuarial practice"
-url                      : https://wiloo82.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : /website # the subpath of your site, e.g. "/blog"
+url                      : "https://wiloo82.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/website" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+#logo                     : "assets/images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "https://www.python.org/static/community_logos/python-powered-w-200x80.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -112,7 +113,7 @@ author:
   avatar           : "/assets/images/avatar.jpg"
   bio              : "Actuaire"
   location         : "Taipei, TW"
-  email            : pascalwinter82@gmail.com
+  email            : "pascalwinter82@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
