Progress done in most of pages + added WIP and fixed some bugs

--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ analytics:
 author:
   name             : "Pascal Winter"
   avatar           : "/assets/images/avatar.jpg"
-  bio              : "Actuaire"
+  bio              : "Actuaire IA"
   location         : "Taipei, TW"
   email            : "pascalwinter82@gmail.com"
   links:
