--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,8 +33,8 @@
         url: /ipa/introduction/#abstract
       - title: "History"
         url: /ipa/introduction/#history
-      - title: "Overview"
-        url: /ipa/introduction/#overview
+      - title: "Current Practices"
+        url: /ipa/introduction/#current
 
   - title: "Formalisation"
     url: /ipa/formalisation/
