--- a/_config.yml
+++ b/_config.yml
@@ -110,16 +110,16 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : google # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
+    tracking_id          : UA-155845172-1
+    anonymize_ip         : true
 
 
 # Site Author
 author:
   name             : "Pascal Winter"
-  avatar           : "/assets/images/avatar.jpg"
+  avatar           : #"/assets/images/avatar.jpg"
   bio              : "Actuaire IA"
   location         : "Taipei, TW"
   email            : "pascalwinter82@gmail.com"
@@ -138,7 +138,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/wiloo82/actuarial-tools/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
