--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Pascal Winter"
 description              : "A Pythonic approach to Actuarial practice"
-url                      : "https://wiloo82.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://pascal-winter.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/website" # the subpath of your site, e.g. "/blog"
-repository               :  wiloo82/wiloo82.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               :  pascal-winter/pascal-winter.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 #logo                     : "assets/images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 logo                     : "https://www.python.org/static/community_logos/python-powered-w-200x80.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -138,7 +138,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/wiloo82/actuarial-tools/"
+      url: "https://github.com/pascal-winter/actuarial-tools/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -154,7 +154,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+       url: "https://github.com/pascal-winter/actuarial-tools/"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
