--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ minimal_mistakes_skin    : "dirt" # ""default" # "air", "aqua", "contrast", "dar
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Life Actuarial Studies"
+title                    : "Life Actuarial Tinkering"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Pascal Winter"
