--- a/_config.yml
+++ b/_config.yml
@@ -26,12 +26,12 @@ minimal_mistakes_skin    : "dirt" # ""default" # "air", "aqua", "contrast", "dar
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Life Actuarial Tinkering"
+title                    : "Actuarial & Analytics Studies"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Pascal Winter"
 description              : "A Pythonic approach to Actuarial practice"
-url                      : "https://pascal-winter.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://winter-aas.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/website" # the subpath of your site, e.g. "/blog"
 repository               :  pascal-winter/pascal-winter.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -122,7 +122,7 @@ author:
   avatar           : #"/assets/images/avatar.jpg"
   bio              : "Actuaire IA"
   location         : "Taipei, TW"
-  email            : "pascalwinter82@gmail.com"
+  email            : "pascal.winter@winter-aas.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -138,7 +138,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/pascal-winter/da-tools/"
+      url: "https://github.com/pascal-winter/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -154,7 +154,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/pascal-winter/actuarial-tools/"
+      url: "https://github.com/pascal-winter/"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
