--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 #theme                  : "minimal-mistakes-jekyll"
 
 #theme                  : "minimal-mistakes-jekyll"
-remote_theme: "mmistakes/minimal-mistakes@4.17.2"
+remote_theme: "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "dirt" # ""default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -30,9 +30,9 @@ title                    : "Actuarial & Analytics Studies"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Pascal Winter"
-description              : "A Pythonic approach to Actuarial practice"
+description              : "Actuarial & Analytics Studies"
 url                      : "https://winter-aas.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/website" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 repository               :  pascal-winter/pascal-winter.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 #logo                     : "assets/images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -120,7 +120,7 @@ analytics:
 author:
   name             : "Pascal Winter"
   avatar           : #"/assets/images/avatar.jpg"
-  bio              : "Actuaire IA"
+  bio              : "Actuary and Data Science Enthusiast"
   location         : "Taipei, TW"
   email            : "pascal.winter@winter-aas.com"
   links:
@@ -142,6 +142,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/pascal-winter-b90099a1/"
 
 # Site Footer
 footer:
@@ -164,6 +167,9 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url:
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/pascal-winter-b90099a1/"
 
 # Reading Files
 include:
