--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,19 +15,19 @@
   main:
   - title: "Home"
     url: /
-  - title: "IPA"
-    url: /ipa/
+  - title: "Modern Tontines"
+    url: /modern-tontines/
   - title: "Toolkit"
     url: /toolkit/
-  - title: "External Links"
-    url: /externallinks/
+#  - title: "External Links"
+#    url: /external-links/
   - title: "About"
     url: /about/
 
 # Sidebar #################
   docs:
   - title: "Introduction"
-    url: /ipa/introduction/
+    url: /modern-tontines/intro/
     children:
       - title: "Abstract"
         url: /ipa/introduction/#abstract
@@ -37,7 +37,7 @@
         url: /ipa/introduction/#current
 
   - title: "Formalisation"
-    url: /ipa/formalisation/
+    url: /modern-tontines/formalisation/
     children:
       - title: "IPA funds concept"
         url: /ipa/formalisation/#concept
