--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@
     url: /
   - title: "Modern Tontines"
     url: /modern-tontines/
-  - title: "Toolkit"
+  - title: "Bits & Bolts"
     url: /toolkit/
 #  - title: "External Links"
 #    url: /external-links/
