--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ remote_theme: "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "dirt" # ""default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Pascal Winter"
+locale                   : "en-GB"
+title                    : "PW's Site"
 title_separator          : "-"
 subtitle                 : # "Actuarial & Analytics Studies" # site tagline that appears below site title in masthead
 name                     : "Pascal Winter"
