--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,7 @@ title_separator          : "-"
 subtitle                 : # "Actuarial & Analytics Studies" # site tagline that appears below site title in masthead
 name                     : "Pascal Winter"
 description              : "Actuarial & Analytics Studies"
-#url                      : "https://winter-aas.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-url                      : "//winter-aas.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://winter-aas.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 repository               :  pascal-winter/pascal-winter.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
