--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,10 @@ title_separator          : "-"
 subtitle                 : # "Actuarial & Analytics Studies" # site tagline that appears below site title in masthead
 name                     : "Pascal Winter"
 description              : "Actuarial & Analytics Studies"
-url                      : "https://winter-aas.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://www.winter-aas.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
-repository               :  pascal-winter/pascal-winter.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               :  pascal-winter/website # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+#repository               :  pascal-winter/pascal-winter.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 #logo                     : "assets/images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 logo                     : #"https://www.python.org/static/community_logos/python-powered-w-200x80.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
