--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@
     url: /services/
   - title: "Modern Tontines"
     url: /modern-tontines/
-  - title: "About Me"
+  - title: "About"
     url: /about/
   - title: "Contact"
     url: /contact/
