--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ author:
   avatar           : "/assets/images/avatar.jpg"
   bio              : "Actuary - Institut des Actuaires"
   #location         : "Taipei, TW"
-  email            : "pascal.winter@winter-aas.com"
+  email            : "pascal@winter-aas.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
