--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ minimal_mistakes_skin    : "dirt" # ""default" # "air", "aqua", "contrast", "dar
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Pascal Winter"
+title                    : "Winter AAS"
 title_separator          : "-"
-subtitle                 : # "Actuarial & Analytics Studies" # site tagline that appears below site title in masthead
-name                     : "Pascal Winter"
+subtitle                 : "Actuarial & Analytics Studies" # site tagline that appears below site title in masthead
+name                     : "Winter AAS"
 description              : "Actuarial & Analytics Services"
 url                      : "https://www.winter-aas.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
